<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.prime_hq.face_analytic_expression.MainActivity">

    <FrameLayout
        android:id="@+id/cam_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/overlay_Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SurfaceView
            android:id="@+id/surfaceView_cam"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/imageView_bot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="@+id/surfaceView_cam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/overlay" />

        <ImageView
            android:id="@+id/imageView_bot"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/android_2_48"
            android:contentDescription="@string/todo"
            app:layout_constrainedWidth="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/border" />

        <ImageView
            android:id="@+id/imageView_face"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/avatar_1"
            android:contentDescription="@string/todo"
            app:layout_constrainedWidth="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/border" />

        <TextView
            android:id="@+id/textView_response"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/hello"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView_face"
            app:layout_constraintStart_toStartOf="@+id/imageView_bot"
            app:layout_constraintTop_toTopOf="@+id/imageView_bot" />

        <TextView
            android:id="@+id/textView_auto_set"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:gravity="start|center_vertical"
            android:text="@string/timer_off"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_auto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_auto"
            app:layout_constraintTop_toTopOf="@+id/button_auto" />

        <Button
            android:id="@+id/button_take"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/ic_menu_camera"
            app:layout_constraintBottom_toBottomOf="@+id/surfaceView_cam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_auto"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/ic_menu_recent_history"
            app:layout_constraintBottom_toBottomOf="@+id/surfaceView_cam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_take" />

        <Button
            android:id="@+id/button_pref"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/gear_icon_48"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>